--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -22,6 +22,12 @@
     padding: 5px 20px;
 }
 
+.main_nav_wrapper{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
 /* .main_nav a.router_link_exact_active {
     color: #42b983;
 } */
@@ -30,7 +36,7 @@
     text-decoration: none;
     display: flex;
     align-items: center;
-    gap: .5rem;
+    gap: .2rem;
     font-weight: bold;
     color: #2c3e50;
 }
