--- a/src/pages/Account/Account.module.scss
+++ b/src/pages/Account/Account.module.scss
@@ -29,6 +29,7 @@
     color: #fff;
     font-weight: bold;
     padding: 10px;
+    cursor: pointer;
 }
 
 .header {
@@ -36,3 +37,40 @@
     margin-bottom: 2rem;
 }
 
+.edit__modal {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    margin-bottom: 2rem;
+
+    &__content {
+        display: flex;
+        gap: .5rem;
+        justify-content: center;
+
+        &__input {
+            padding: .5rem;
+            border-radius: 3px;
+            border: 1px solid #B3BCC7;
+
+            &::placeholder {
+                color: #B3BCC7;
+            }
+        }
+    }
+
+    &__buttons {
+        display: flex;
+        gap: .5rem;
+        justify-content: center;
+
+        &__btn {
+            padding: .4rem;
+            width: 100px;
+            background: white;
+            border-radius: 3px;
+            border: 1px solid #5256EC;
+            color: #5256EC;
+        }
+    }
+}
